--- a/Website(Part1).html
+++ b/Website(Part1).html
@@ -49,9 +49,9 @@
   </head>
   <body>
     <ul>
-      <li><a href= "Website(Part1).html">Home</a></li>
-      <li><a href= "Website(Part2).html">Violin</a></li>
-      <li><a href= "Website(Part3).html">Programming</a></li>
+      <li><a href= "http://stringlady.github.io/Website(Part1).html">Home</a></li>
+      <li><a href= "http://stringlady.github.io/Website(Part2).html">Violin</a></li>
+      <li><a href= "http://stringlady.github.io/Website(Part3).html">Programming</a></li>
       <li><a href= "https://github.com/stringlady">Github</a></li>
     </ul>
     <h1>All About Anaya Bussey</h1>
