--- a/Home.html
+++ b/Home.html
@@ -49,9 +49,9 @@
   </head>
   <body>
     <ul>
-      <li><a href= "http://stringlady.github.io/Website(Part1).html">Home</a></li>
-      <li><a href= "http://stringlady.github.io/Website(Part2).html">Violin</a></li>
-      <li><a href= "http://stringlady.github.io/Website(Part3).html">Programming</a></li>
+      <li><a href= "http://stringlady.github.io/Home.html">Home</a></li>
+      <li><a href= "http://stringlady.github.io/Violin.html">Violin</a></li>
+      <li><a href= "http://stringlady.github.io/Programming.html">Programming</a></li>
       <li><a href= "https://github.com/stringlady">Github</a></li>
     </ul>
     <h1>All About Anaya Bussey</h1>
