--- a/Home.html
+++ b/Home.html
@@ -52,13 +52,12 @@
       <li><a href= "http://stringlady.github.io/Home.html">Home</a></li>
       <li><a href= "http://stringlady.github.io/Violin.html">Violin</a></li>
       <li><a href= "http://stringlady.github.io/Programming.html">Programming</a></li>
-      <li><a href= "https://github.com/stringlady"><img src="https://assets-cdn.github.com/images/modules/logos_page/Octocat.png" height="75" width="60"></a></li>
     </ul>
     <h1>All About Anaya Bussey</h1>
     <p style="text-align: center"><img  src="https://pbs.twimg.com/profile_images/639502696110780416/crhNpGTY.jpg" width="300" height="300"></p>
     <p>I am a 7th grader at a great middle school in New York, NY. I hold a 4.0 GPA and my favorite subjects are Math and Science. I love to read and my all time favorite book is The Chronicles of Narnia by CS Lewis. I began playing the violin at age 7. My favorite classical piece is Moonlight Sonata by Beethoven. In the summer of 2014 I began coding and I got "bitten by the coding bug" and I love creating my own projects and attended Hackathons and joining others who love to code.</p>
   <p>
-    I can be reached at: <br><a href="mailto:anayabussey@gmail.com">anayabussey@gmail.com</a><br> Tweet Me: <a href="https://twitter.com/Anayabuss?lang=en" target="_top">@Anayabuss</a> 
+   <a href="mailto:anayabussey@gmail.com"><img src="https://www.lehigh.edu/google/gmail.png" height="40" width="40"></a><a href="https://twitter.com/Anayabuss?lang=en" target="_top"><img src="https://pbs.twimg.com/profile_images/666407537084796928/YBGgi9BO.png" height="40" width="40"></a><a href="https://github.com/stringlady"><img src="https://assets-cdn.github.com/images/modules/logos_page/Octocat.png" height="40" width="40"></a>
     
     </p>
   </body>
