--- a/Home.html
+++ b/Home.html
@@ -6,6 +6,7 @@
       * {
         font-family: monospace;
         background-color: #fff48b;
+        text-align: center;
       }
       strong {
         font-size: 16px;
