--- a/Home.html
+++ b/Home.html
@@ -8,6 +8,9 @@
         background-color: #fff48b;
         text-align: center;
       }
+      a {
+        text-align: center;
+      }
       strong {
         font-size: 16px;
         text-align: center;
