--- a/Programming.html
+++ b/Programming.html
@@ -63,7 +63,7 @@
 </head>
 <body>
   <ul class="love">
-    <li class="love"><a  class="love" href= "stringlady.github.io/Home.html">Home</a></li>
+    <li class="love"><a class="love" href= "stringlady.github.io/Home.html">Home</a></li>
     <li class="love"><a class="love" href= "stringlady.github.io/Violin.html">Violin</a></li>
     <li class="love"><a class="love" href= "stringlady.github.io/Programming.html">Programming</a></li>
     <li class="love"><a class="love" href= "https://github.com/stringlady" >Github</a></li>
@@ -72,7 +72,7 @@
   <h1>Computer Science Programs</h1>
   <p>* Black Girls Code<br>* Coderdojo<br>* ID Tech<br>* Nano Hacker<br>* CStuy<br>* Vidcode with Youtube</p>
   <h1>And the winner is...</h1>
-  <p>-Black Girls Code July 2014 1st place winner<br>-Agile Youth Challenge April 2014 beginner's 1st place winner<br>Agile Youth Challenge -October 2015 Agile category<br>-Space Apps Beginner Category 1st place winner<br>-CSTUY December 2015 top three winner
+  <p>-Black Girls Code July 2014 1st place winner<br>-Agile Youth Challenge April 2014 beginner's 1st place winner<br>Agile Youth Challenge -October 2015 Agile category<br>-Space Apps Beginner Category 1st place winner<br>-CSTUY December 2015 top three winner</p>
   <h1>
     Languages I know
   </h1>
@@ -80,13 +80,18 @@
     * HTML<br>* Javascript<br>* CSS<br>* Java<br>* Python<br>* JQuery
   </p>
   <p>
-    Here are a few of my projects, to see the code of these projects and this webpage click on Remix.
+    Here are a few of my projects.
   </p>
   
     <a href="https://d157rqmxrxj6ey.cloudfront.net/futurecoder/21898/">Bingo Game</a>
   <br>
-  <a href="https://d157rqmxrxj6ey.cloudfront.net/futurecoder/21709/">My very first website</a><br>
-  
+  <a href="https://d157rqmxrxj6ey.cloudfront.net/futurecoder/21709/">My very first website</a>
+  <br>
+  <a href="http://devpost.com/software/cc-trivia">CC Trivia</a>
+  <br>
+  <a href="http://lettherebepeasonearth.weebly.com">Peas On Earth</a>
+  <br>
+  <a href= "http://devpost.com/software/money-management?ref_content=feed-project-update&ref_feature=feed&ref_medium=feed">Money Management</a><br>
   </br><iframe width="420" height="315" src="https://www.youtube.com/embed/0RCosUuvQlM" frameborder="0" allowfullscreen></iframe>
   <p>
     Check out my presentation for my game QuestQuest.
