--- a/Programming.html
+++ b/Programming.html
@@ -83,7 +83,7 @@
     Here are a few of my projects.
   </p>
   
-    <a href="https://d157rqmxrxj6ey.cloudfront.net/futurecoder/21898/">Bingo Game</a>
+    <a href="http://devpost.com/software/bingo-game#">Bingo Game</a>
   <br>
   <a href="https://d157rqmxrxj6ey.cloudfront.net/futurecoder/21709/">My very first website</a>
   <br>
