--- a/Violin.html
+++ b/Violin.html
@@ -52,7 +52,7 @@
         color: firebrick;
         text-align: center;
         padding: 20px 20px;
-        text-decoration: none;
+        text-decoration: none
       }
 
       /* Change the link color to #111 (black) on hover */
