--- a/Violin.html
+++ b/Violin.html
@@ -6,41 +6,31 @@
     <style>
       * {
         font-family: monospace;
+        background-color: #fff48b;
+        text-align: center;
+      }
+      a {
+        text-align: center;
       }
       strong {
         font-size: 16px;
         text-align: center;
         color: black;
       }
-      ul {
-        font-size: 16px;
-        color: black;
 
-      }
-      html {
-        background-color: #fff48b;
-
-      }
       p {
         font-size: 16px;
         color: black;
-        text-align: center;
-
-      }
+        }
       h1 {
         text-align: center;
         color: black;
-      }
-      a {
-        color: darkblue;
-        text-align: center;
       }
       ul {
         list-style-type: none;
         margin: 0;
         padding: 0;
         overflow: hidden;
-        text-align: center;
       }
 
       .hope {
@@ -52,7 +42,7 @@
         color: firebrick;
         text-align: center;
         padding: 20px 20px;
-        text-decoration: none
+        text-decoration: none;
       }
 
       /* Change the link color to #111 (black) on hover */
