--- a/Website(Part1).html
+++ b/Website(Part1).html
@@ -56,7 +56,7 @@
     </ul>
     <h1>All About Anaya Bussey</h1>
     <p style="text-align: center"><img  src="https://pbs.twimg.com/profile_images/639502696110780416/crhNpGTY.jpg" width="300" height="300"></p>
-    <p>I am a 7th grader at a great middle school in New York, NY. I hold a 4.0 GPA and my favorite subjects are Math and Science. I love to read and my all time favorite book is The Chronicles of Narnia by CS Lewis. I began playing the violin at age 7. My favorite classical piece is Moonlight Sonata by Beethoven. In the summer of 2014 I began coding and I got "bitten by the coding bug" and I love creating my own projects and attended Hackathons and joining others who love to code.</p>
+    <p>I am an 8th grader at The Stony Brook School in Long Island, NY. My favorite subjects are Math and Science. I love to read and my all time favorite book is The Chronicles of Narnia by CS Lewis. I began playing the violin at age 7. My favorite classical piece is Moonlight Sonata by Beethoven. In the summer of 2014 I began coding and I got "bitten by the coding bug" and I love creating my own projects and attended Hackathons and joining others who love to code.</p>
   <p>
     I can be reached at: <br><a href="mailto:anayabussey@gmail.com">anayabussey@gmail.com</a><br> Tweet Me: <a href="https://twitter.com/Anayabuss?lang=en" target="_top">@Anayabuss</a> 
     
