--- a/Website(Part2).html
+++ b/Website(Part2).html
@@ -71,9 +71,9 @@
     <marquee><img src="http://g02.a.alicdn.com/kf/HTB1380AIXXXXXaRXFXXq6xXFXXXM/Christmas-Gift-Fashion-Fun-Mini-Electronic-Classic-Violin-Toy-for-Kids-Sound-Toy-Artist-Set.jpg" width="100" height="100" /> <img src="http://g02.a.alicdn.com/kf/HTB1380AIXXXXXaRXFXXq6xXFXXXM/Christmas-Gift-Fashion-Fun-Mini-Electronic-Classic-Violin-Toy-for-Kids-Sound-Toy-Artist-Set.jpg" width="100" height="100" /> <img src="http://g02.a.alicdn.com/kf/HTB1380AIXXXXXaRXFXXq6xXFXXXM/Christmas-Gift-Fashion-Fun-Mini-Electronic-Classic-Violin-Toy-for-Kids-Sound-Toy-Artist-Set.jpg" width="100" height="100" /> <img src="http://g02.a.alicdn.com/kf/HTB1380AIXXXXXaRXFXXq6xXFXXXM/Christmas-Gift-Fashion-Fun-Mini-Electronic-Classic-Violin-Toy-for-Kids-Sound-Toy-Artist-Set.jpg" width="100" height="100" /> <img src="http://g02.a.alicdn.com/kf/HTB1380AIXXXXXaRXFXXq6xXFXXXM/Christmas-Gift-Fashion-Fun-Mini-Electronic-Classic-Violin-Toy-for-Kids-Sound-Toy-Artist-Set.jpg" width="100" height="100" /> <img src="http://g02.a.alicdn.com/kf/HTB1380AIXXXXXaRXFXXq6xXFXXXM/Christmas-Gift-Fashion-Fun-Mini-Electronic-Classic-Violin-Toy-for-Kids-Sound-Toy-Artist-Set.jpg" width="100" height="100" /> <img src="http://g02.a.alicdn.com/kf/HTB1380AIXXXXXaRXFXXq6xXFXXXM/Christmas-Gift-Fashion-Fun-Mini-Electronic-Classic-Violin-Toy-for-Kids-Sound-Toy-Artist-Set.jpg" width="100" height="100" /> <img src="http://g02.a.alicdn.com/kf/HTB1380AIXXXXXaRXFXXq6xXFXXXM/Christmas-Gift-Fashion-Fun-Mini-Electronic-Classic-Violin-Toy-for-Kids-Sound-Toy-Artist-Set.jpg" width="100" height="100" /> <img src="http://g02.a.alicdn.com/kf/HTB1380AIXXXXXaRXFXXq6xXFXXXM/Christmas-Gift-Fashion-Fun-Mini-Electronic-Classic-Violin-Toy-for-Kids-Sound-Toy-Artist-Set.jpg" width="100" height="100" /> <img src="http://g02.a.alicdn.com/kf/HTB1380AIXXXXXaRXFXXq6xXFXXXM/Christmas-Gift-Fashion-Fun-Mini-Electronic-Classic-Violin-Toy-for-Kids-Sound-Toy-Artist-Set.jpg" width="100" height="100" /></marquee>
     <h1>Musical Programs Attended</h1>
   <ul style="color: black">
-    <li>Harmony Program - 2012 - Present</li>
-    <li>Inter School Orchestra - 2014 - Present</li>
-    <li>Face the Music - 2015 - Present</li>
+    <li>Harmony Program - 2012 - 2016</li>
+    <li>Inter School Orchestra - 2014 - 2016</li>
+    <li>Face the Music - 2015 - 2016</li>
   </ul>
   <h1>Musical Performances</h1>
     <p> Roulette-fall 2015<br> Recital-spring 2015<br> Carnegie Hall-spring 2015<br> Symphony Space-winter 2014<br> Master class with the Philharmonic, 2014-2015</p>
