--- a/Home.html
+++ b/Home.html
@@ -9,7 +9,7 @@
 		<div class="header">
 			<a href="#intro">About Me</a>
 			<a href="#projects"> My Projects</a>
-			<a href="https://drive.google.com/file/d/1dVERMv7Bub9hix-eTG2Rsp0B3J3og0KR/view?usp=sharing" target="_blank"> Resume</a>
+			<a href="https://docs.google.com/document/d/1g-qvpJRo7PKwysouygAr9X0AcKLHtVnGIwWbpzLP8Xs/edit?usp=sharing" target="_blank"> Resume</a>
 			<a href="#experience"> Experience</a>
 
 		</div>
