--- a/Home.html
+++ b/Home.html
@@ -290,7 +290,7 @@
 		</br>
 			<div id="lang">
 				<a style= "font-weight: bold;">Coding Languages: </a></br>
-				<a>Java, Python, HTML, CSS, JavaScript, Swift, Scheme/Racket</a>
+<a>Java, Python, HTML, CSS, JavaScript, </br> Swift, Scheme/Racket, PHP</a>
 
 			</div>
 			<div id="skill">
